--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "maintenance-mode",
-  "version": "0.0.0",
-  "private": true,
+  "name": "error-pages",
+  "version": "0.1.0",
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-i18n": "10.0.0-beta.5",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
@@ -46,5 +47,8 @@
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
+  },
+  "engines": {
+    "pnpm": "^9.5.0"
   }
 }
