Migrate ESLint and UnoCSS
This commit introduces UnoCSS as the new CSS utility framework and
updates the ESLint setup for improved code quality and consistency. Key
changes include:

- Replaced `.eslintrc.cjs` with `eslint.config.mjs` for flat config
support
- Updated `package.json` with new dependencies and scripts
- Modified `tsconfig.json` to include necessary compiler options
- Added `uno.config.ts` with initial UnoCSS configuration

These changes aim to enhance the project's styling capabilities and
linting process, providing a more modern and efficient development
experience.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,24 @@
 {
   "files": [],
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "disableReferencedProjectLoad": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": ["vite/client", "@types/vue"]
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules"],
   "references": [
     {
       "path": "./tsconfig.node.json"
