--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,21 @@
 {
-  "files": [],
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
-    "jsx": "preserve",
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
     "disableReferencedProjectLoad": true,
+    "target": "esnext",
+    "jsx": "preserve",
     "baseUrl": ".",
+    "module": "esnext",
+    "moduleResolution": "node",
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite/client", "@types/vue"]
+    "types": ["vite/client", "@types/vue"],
+    "strict": true,
+    "importHelpers": true,
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules"],
   "references": [
     {
       "path": "./tsconfig.node.json"
@@ -29,5 +26,8 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "files": [],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules"]
 }
