--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "parse-duration": "^1.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-i18n": "10.0.0-beta.5",
