Update dependencies and improve type-checking and linting configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite/client", "@types/vue"],
+    "types": ["vite/client"],
     "strict": true,
     "importHelpers": true,
     "sourceMap": true,
