Fix (hopefully) for tsconfig errs on build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     }
   ],
   "files": [],
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [],
   "exclude": ["node_modules"]
 }
