--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,5 +10,5 @@
     }
   },
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"]
+  "exclude": ["src/**/__tests__/*", "node_modules", "dist"]
 }
