--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "~5.4.0",
     "unocss": "^0.61.7",
     "vite": "^5.3.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
