Add Docker configuration and update maintenance messages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "paths": {
       "@/*": ["src/*"]
     },
     "types": ["vite/client"],
+    "allowImportingTsExtensions": true,
     "strict": true,
     "importHelpers": true,
     "sourceMap": true,
