--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,13 +22,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: pnpm # Changed from npm to pnpm
-      - uses: pnpm/action-setup@v2 # Added pnpm setup action
-        with:
-          version: 8 # Or any other supported version
+          cache: pnpm
       - run: pnpm install
       - run: pnpm run build --if-present
