--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,20 +15,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
         with:
-          version: 10.7.0  # Updated to match required version
-      - name: Use Node.js ${{ matrix.node-version }}
+          version: 10.7.0
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20.x
           cache: pnpm
       - run: pnpm install
       - run: pnpm run build --if-present
