--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
           node-version: 20.x
           cache: pnpm
       - run: pnpm install
-      - run: pnpm run build --if-present
+      - run: pnpm run build
