Enhance Node.js CI workflow to include unit tests and set base URL for GitHub Pages

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,14 +30,33 @@ jobs:
           node-version: 20.x
           cache: pnpm
       - run: pnpm install
-      - run: pnpm run build
+
+      # Run tests
+      - name: Run unit tests
+        run: pnpm test:unit
+
+      # Set base URL for GitHub Pages
+      - name: Set base URL
+        run: |
+          echo "VITE_BASE_URL=/${GITHUB_REPOSITORY#*/}/" >> .env.production
+
+      - name: Build
+        run: pnpm run build
 
       # Configure Pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      # Upload artifact
-      - name: Upload artifact
+      # Upload build artifact
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: github-pages
+          path: ./dist
+          retention-days: 7
+
+      # Upload Pages artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./dist
